add emojis na bio do sobre

--- a/index.html
+++ b/index.html
@@ -107,19 +107,20 @@
                         </div>
                         <div class="about-text" data-aos="fade-left">
                             <h2>Sobre a Dra. Dayse Neves</h2>
-                            <p>Olá, sou Dra. Dayse Neves, nutricionista, CRN1 4621, e estou aqui para te ajudar a
+                            <p>✨Olá, sou Dra. Dayse Neves, nutricionista, CRN1 4621, e estou aqui para te ajudar a
                                 alcançar
                                 seus
                                 objetivos de saúde, bem-estar e performance. Minha missão é proporcionar um atendimento
                                 humanizado e personalizado, com base científica, para transformar sua relação com a
                                 comida e
                                 seu corpo.</p>
-                            <p>Com especialização em obesidade, estética e nutrição esportiva, desenvolvo planos
+                            <p>🍎Com especialização em obesidade, estética e nutrição esportiva, desenvolvo planos
                                 alimentares
                                 individualizados que respeitam suas preferências, rotina e necessidades específicas.</p>
-                            <p>Atendo presencialmente em Goianésia, Goiás, na Clínica NutriEssence, e também ofereço
+                            <p>📍Atendo presencialmente em Goianésia, Goiás, na Clínica NutriEssence, e também ofereço
                                 consultas online para todo o Brasil. Meu objetivo é empoderar você através da educação
                                 nutricional, para que possa fazer escolhas alimentares conscientes e sustentáveis.</p>
+                            <p>✨ Se você deseja cuidar da sua saúde de forma única, inteligente e transformadora, será um prazer caminhar ao seu lado nessa jornada.</p>
                             <div class="specialty-badge">Especialista em Obesidade, Estética e Esporte</div>
                         </div>
                     </div>
